modified docker file